[package]
name = "zerotier-manager"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3"
dialoguer = "0.11.0"
colored = "3.0.0"
chrono = "0.4.41"